--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -103,7 +103,9 @@
       <div class="container">
         <img id="can1" src="images/cans.png">
       </div>
+
       <hr>
+
         <div class="row">
           <div class="col s12 m4 l4">
             <h6>PRESIDENT</h6>
@@ -117,8 +119,7 @@
                   <a class = "grey" href='#'>Snapchat</a>
                 </div>
               </div>
-            </div>
-
+          </div>
 
           <div class="col s12 m4 l4">
             <h6>VICE PRESIDENT</h6>
@@ -133,53 +134,38 @@
                 </div>
               </div>
           </div>
-
-
-
-
-
-
-
-
-
-
-
-
-      </div>
+        </div>
     </div>
+
 
     <!--Section 4 -->
     <div class="container portfolio">
       <a id = "policyjump"> </a>
-      <h5 id="needspace">POLICIES</h5>
-      <h6>CLICK TO VIEW</h6>
-      <hr>
-      <div class="row">
-        <div class="col s12 m12 l12 portfolio-holder">
-          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-        </div>
-      </div>
+        <h5 id="needspace">POLICIES</h5>
+        <h6>CLICK TO VIEW</h6>
+
+          <hr>
+
+          <div class="row">
+            <div class="col s12 m12 l12 portfolio-holder">
+              <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+              <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+              <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+              <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+              <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+              <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+            </div>
+          </div>
     </div>
-
-
-
-
-
-
-
 
 
     <!--Section 5-->
     <div class="container whos-involved">
       <a id = "staffjump"> </a>
-      <h5 id="needspace"> Who's Involved </h5>
-      <h6> See who's on our staff! </h6>
-      <hr>
+        <h5 id="needspace"> Who's Involved </h5>
+        <h6> See who's on our staff! </h6>
+
+        <hr>
       <!-- Wheel here -->
       <div class = "wheel">
         <div> 1 </div>
@@ -190,112 +176,74 @@
     </div>
 
 
-
-
-
-
-
-
     <!--Section 6-->
     <div class="container get-involved">
       <h5 id="needspace"> Get Invovled </h5>
       <h6> Connect with us on social media! </h6>
+
       <hr>
 
-      <div class = "row">
+        <div class = "row">
 
 
         <!--Twitter Feed-->
         <a id = "mediajump"> </a>
-        <div id="twitter" class = "col l6 m6 s12">
-          <a class="twitter-timeline" href="https://twitter.com/kanyewest" data-widget-id="699825061155500032">Tweets by @kanyewest</a>
-          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-          </script>
-        </div>
+          <div id="twitter" class = "col l6 m6 s12">
+            <a class="twitter-timeline" href="https://twitter.com/kanyewest" data-widget-id="699825061155500032">Tweets by @kanyewest</a>
+              <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+              </script>
+          </div>
+
+          <div id="twitter" class="col l6 m6 s12 shift-right" style="float: right;">
+            <a class="twitter-timeline" href="https://twitter.com/hannibalburess" data-widget-id="699825061155500032">Tweets by @hannibalburess</a>
+              <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+              </script>
+          </div>
+
+          </div>
+          <!--<div id="facebook" >
+                <div class="fb-follow" data-href="https://www.facebook.com/zuck" data-layout="standard" data-show-faces="true"></div>
+              </div-->
+          </div>
 
 
+      <!-- CONTACT-->
+    <div class="container contact">
+      <a id = "contactjump"> </a>
+        <h5 id="needspace">contact us</h5>
 
-
-        <div id="twitter" class="col l6 m6 s12 shift-right" style="float: right;">
-          <a class="twitter-timeline" href="https://twitter.com/hannibalburess" data-widget-id="699825061155500032">Tweets by @hannibalburess</a>
-          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-          </script>
-        </div>
-
-
-      </div>
-      <!--<div id="facebook" >
-      <div class="fb-follow" data-href="https://www.facebook.com/zuck" data-layout="standard" data-show-faces="true"></div>
-    </div-->
-  </div>
-
-
-  <!-- Last Section -->
-  <div class="container contact">
-    <a id = "contactjump"> </a>
-    <h5 id="needspace">contact</h5>
-    <h6>get in touch with me</h6>
-    <hr>
-    <div class="row">
-      <div class="col s6 m6 l6">
-        <div class="row">
-          <form class="col s12">
-            <div class="row">
-              <div class="input-field col s6">
-                <div class='contactcontainer'>
-                  <header id="contactheader">
-                    <h1 id="contacth1">Send us a suggestion!</h1>
-                  </header>
-                  <div class='name'>
-                    <input class='first' placeholder='First Name' type='text'>
-                    <input class='last' placeholder='Last Name' type='text'>
-                  </div>
-                  <div class='contact'>
-                    <input class='email' placeholder='E-mail Address' type='text'>
-                  </div>
-                  <div class='message'>
-                    <textarea placeholder='Your Suggestions Here!'></textarea>
-                  </div>
-                  <button class = "btn waves-effect waves-light" id ="contactbutton">Send Suggestion</button>
-                </div>
-              </div>
-            </div>
+          <!--CONTACT US CODE set to rathomas17@gmail.com-->
+          <form action="MAILTO:rathomas17@gmail.com" method="post" enctype="text/plain">
+            Your Name:
+              <input type="text" name="name">
+            Email Address:
+              <input type="text" name="email">
+            Message:
+              <textarea name="message"></textarea>
+            <input type="submit" value="Submit">
           </form>
-
-          <!--  <div class="col s6 m6 l6 contact-holder">
-          <h6 class="mdi-action-home">Address</h6>
-          <p>Nr. 6, 21 Awesome Street, London, UK</p>
-          <h6 class="mdi-hardware-phone-android">Phone Number</h6>
-          <p>+91 9912776151</p>
-          <h6 class="mdi-action-open-in-browser">Website</h6>
-          <p>qnimate.com</p>
-        </div>-->
-
-
-
-      </div>
+          <!--END CONTACT US CODE-->
     </div>
 
+      <script type="text/javascript" src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+        <!--<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.min.js"></script>-->
+      <script type="text/javascript" src='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/js/materialize.min.js'></script>
+        <!--<script type="text/javascript" src="main.js"></script>-->
+
+
+    <!--EXPENSE REPORT-->
+    <a href= "images/money.gif"> <h4 id="needspace"> CLICK HERE TO VIEW THE EXPENSE REPORT</h4></a>
+
+
+    <!--FOOTER-->
+    <footer id = "indexfoot">
+      <p>&copy; 2016 Kamari Wright and Ryan-Alexander Thomas</p>
+    </footer>
+
+  </body>
 
 
 
-  </div>
-</div>
-<script type="text/javascript" src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<!--<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.min.js"></script>-->
-<script type="text/javascript" src='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/js/materialize.min.js'></script>
-<!--<script type="text/javascript" src="main.js"></script>-->
 
 
-<a href= "images/money.gif"> <h4 > CLICK HERE TO VIEW THE EXPENSE REPORT</h4></a>
-
-
-
-
-
-<footer id = "indexfoot">
-  <p>&copy; 2016 Kamari Wright and Ryan-Alexander Thomas</p>
-</footer>
-
-</body>
 </template>
