--- a/css/style.css
+++ b/css/style.css
@@ -327,11 +327,11 @@ footer
 	}
 
 
-
-
-
+}
 
 /*!!!CONTACT US CSS!!!*/
+
+
 
 body {
   font: 16px Helvetica;
@@ -339,10 +339,10 @@ body {
 }
 
 .contactcontainer {
-  width: 600px;
+  width: 100%;
   margin: 2em auto;
   overflow: hidden;
-  background: white;
+  background: black !important;
   border-radius: 5px;
 }
 
@@ -381,7 +381,7 @@ body {
   width: 278px;
   margin: 0;
   padding: 0 0 0 20px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 1);
   height: 50px;
 }
 
@@ -435,5 +435,4 @@ textarea {
   outline: none;
   background: rgba(52, 152, 219, 0.1);
   color: rgba(51, 51, 51, 0.7);
-}
 }
