--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -194,7 +194,7 @@
               </script>
           </div>
 
-          <div id="twitter" class="col l6 m6 s12 shift-right" style="float: right;">
+          <div id="twitter2" class="col l6 m6 s12 shift-right" style="float: right;">
             <a class="twitter-timeline" href="https://twitter.com/hannibalburess" data-widget-id="699825061155500032">Tweets by @hannibalburess</a>
               <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
               </script>
