fixed title and menu on mobile

--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -52,8 +52,8 @@
     <!--HEADER-->
     <a id = "topjump">
       <div id="homeheader" class="intro yellow darken-4 z-depth-3">
-        <h1 class="grey-text text-lighten-5">Test test</h1>
-        <h5 clas="grey lighten-4 grey-text text-darken-1">it's lit</h5>
+        <h1 class="grey-text text-lighten-5">campaign    hq</h1>
+        <h5 clas="grey lighten-4 grey-text text-darken-1">vote for them</h5>
       </div>
     </a>
     <!--END HEADER-->
