--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -106,7 +106,7 @@
 
       <hr>
 
-        <div class="row">
+        <div id="cans" class="row">
           <div class="col s12 m4 l4">
             <h6>PRESIDENT</h6>
               <div class="card grey z">
