--- a/css/style.css
+++ b/css/style.css
@@ -338,13 +338,28 @@ margin: 0 10px 0 0;
 
 	#can1{
 	 display: block;
+	 margin:0 0 0 -40px;
 	max-width: 820px;
 	max-height: 488px;
 
 	}
 
 	#needspace{
-			margin-top: 10%;
+
+			margin-top: 20%;
+	}
+
+	#needspace2{
+		margin-top: 20%;
+	}
+
+	#needspace3{
+		display: block;
+		margin: 0 17% 0 17%;
+	}
+
+	#cans{
+		margin: 20% 0 0 25%;
 	}
 
 
