--- a/client/Templates/home.html
+++ b/client/Templates/home.html
@@ -16,14 +16,21 @@
   <body>
 
     <div class="container about">
-    <div class="intro yellow darken-4 z-depth-1">
-      <h5 clas="grey lighten-4 grey-text text-darken-1">welcome to the campaign site</h5>
-    </div>
+      <div id="homeheader" class="intro yellow darken-4 z-depth-3">
+        <img id="forward" source="images/title.png">
+        <h1 class="grey-text text-lighten-5"> HANEY HENRY </h1>
+      </div>
 
         <!-- YOUTUBE code
         <object id = "homevideo"  data="http://www.youtube.com/v/jjaP3_k0-fY?rel=0&autoplay=1" style="height: 400px; width: 700px;" type="application/x-shockwave-flash"> <param name="movie" value="http://www.youtube.com/v/jjaP3_k0-fY" /></object> -->
 
-    <iframe id = "homevideo" src="https://player.vimeo.com/video/149478317?autoplay=1&loop=1&color=f3d0b5&title=0&byline=0&portrait=0&badge=0" width="100%" height="200" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <!--<iframe id = "homevideo" src="https://player.vimeo.com/video/149478317?autoplay=1&loop=1&color=f3d0b5&title=0&byline=0&portrait=0&badge=0" width="100%" height="200" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>-->
+
+        <video id = "homevideo" width="320" height="240" controls autoplay>
+        <source src="images/vid.mp4" type="video/mp4">
+
+
+    </video>
 
     <div class="row">
       <div class="col s12 m4 l4">
@@ -51,5 +58,5 @@
 
 
 
-  
+
 </template>
