--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -52,8 +52,8 @@
     <!--HEADER-->
     <a id = "topjump">
       <div id="homeheader" class="intro yellow darken-4 z-depth-3">
-        <h1 class="grey-text text-lighten-5">campaign    hq</h1>
-        <h5 clas="grey lighten-4 grey-text text-darken-1">vote for them</h5>
+        <h1 class="grey-text text-lighten-5">HANEY  HENRY</h1>
+        <h5 clas="grey lighten-4 grey-text text-darken-1">Write them in</h5>
       </div>
     </a>
     <!--END HEADER-->
@@ -115,7 +115,7 @@
                   <p>Cool guy. Likes trutles. No Ragarts.</p>
                 </div>
                 <div class="card-action">
-                  <a class = "grey" href="#">Facebook</a>
+                  <a class = "grey" href="http://facebook.com/ryan.a.thomas">Facebook</a>
                   <a class = "grey" href='#'>Snapchat</a>
                 </div>
               </div>
@@ -129,7 +129,7 @@
                   <p>Once opened for Good Charlotte in SXSW.</p>
                 </div>
                 <div class="card-action">
-                  <a class = "grey" href="#">Facebook</a>
+                  <a class = "grey" href="http://facebook.com/ryan.a.thomas">Facebook</a>
                   <a class = "grey" href='#'>Snapchat</a>
                 </div>
               </div>
