--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -220,15 +220,13 @@
               <input type="text" name="email">
             Message:
               <textarea name="message"></textarea>
-            <input type="submit" value="Submit">
+            <input class = "btn submit-btn" type="submit" value="Submit">
           </form>
           <!--END CONTACT US CODE-->
     </div>
 
       <script type="text/javascript" src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-        <!--<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.min.js"></script>-->
       <script type="text/javascript" src='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/js/materialize.min.js'></script>
-        <!--<script type="text/javascript" src="main.js"></script>-->
 
 
     <!--EXPENSE REPORT-->
