Added HANEY/HENRY image and promo video

--- a/client/Templates/home.html
+++ b/client/Templates/home.html
@@ -17,9 +17,10 @@
 
     <div class="container about">
       <div id="homeheader" class="intro yellow darken-4 z-depth-3">
-        <img id="forward" source="images/title.png">
-        <h1 class="grey-text text-lighten-5"> HANEY HENRY </h1>
+<img src="images/title.png" width="40%" height="20%">
+
       </div>
+
 
         <!-- YOUTUBE code
         <object id = "homevideo"  data="http://www.youtube.com/v/jjaP3_k0-fY?rel=0&autoplay=1" style="height: 400px; width: 700px;" type="application/x-shockwave-flash"> <param name="movie" value="http://www.youtube.com/v/jjaP3_k0-fY" /></object> -->
@@ -28,6 +29,7 @@
 
         <video id = "homevideo" width="320" height="240" controls autoplay>
         <source src="images/vid.mp4" type="video/mp4">
+
 
 
     </video>
