--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -52,7 +52,7 @@
     <!--HEADER-->
     <a id = "topjump">
       <div id="homeheader" class="intro yellow darken-4 z-depth-3">
-        <h1 class="grey-text text-lighten-5">HANEY  HENRY</h1>
+        <img id="forward" src="images/title.png" width="50%" height="40%">
         <h5 clas="grey lighten-4 grey-text text-darken-1">Write them in</h5>
       </div>
     </a>
