--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -168,10 +168,18 @@
         <hr>
       <!-- Wheel here -->
       <div class = "wheel">
-        <div> 1 </div>
-        <div> 2 </div>
-        <div> 3 </div>
-        <div> 4 </div>
+        <div>
+          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+        </div>
+        <div>
+          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+        </div>
+        <div>
+          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+        </div>
+        <div>
+          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png"> 
+        </div>
       </div>
     </div>
 
