changed placeholder images in gallery

--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -169,16 +169,16 @@
       <!-- Wheel here -->
       <div class = "wheel">
         <div>
-          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+          <img src="images/kanye.gif">
         </div>
         <div>
-          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+          <img src="images/kanye.gif">
         </div>
         <div>
-          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+          <img  src="images/kanye.gif">
         </div>
         <div>
-          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png"> 
+          <img src="images/kanye.gif">
         </div>
       </div>
     </div>
