modified the three questions

--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -79,15 +79,15 @@
     <div id="needspace3" class="col s12 m4 l4">
       <ul class="collapsible">
         <li class="active">
-          <div class="collapsible-header"><i class="mdi-av-web"></i>Who is the greatest of all time?</div>
+          <div class="collapsible-header"><i class="mdi-av-web"></i>What is USG?</div>
           <div class="collapsible-body"><img id="question" src="images/kanye.gif"></div>
         </li>
         <li>
-          <div class="collapsible-header"><i class="mdi-editor-format-align-justify"></i>How, Sway? How can we make change?</div>
+          <div class="collapsible-header"><i class="mdi-editor-format-align-justify"></i>What is wrong with USG?</div>
           <div class="collapsible-body"><img id="question" src="images/eat.gif"></div>
         </li>
         <li>
-          <div class="collapsible-header"><i class="mdi-av-play-shopping-bag"></i>Can you see the light?</div>
+          <div class="collapsible-header"><i class="mdi-av-play-shopping-bag"></i>How can we fix it?</div>
           <div class="collapsible-body"><img id="question" src="images/puppy.gif"></div>
         </li>
       </ul>
