--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -112,7 +112,7 @@
               <div class="card grey z">
                 <div class="card-content white-text">
                   <img src="images/can1.jpg" width="64" height="64">
-                  <p>Cool guy. Likes trutles. No Ragarts.</p>
+                  <p>Cool guy. Likes turtles. No Ragarts.</p>
                 </div>
                 <div class="card-action">
                   <a class = "grey" href="http://facebook.com/ryan.a.thomas">Facebook</a>
