added timer to homepage

--- a/client/Templates/home.html
+++ b/client/Templates/home.html
@@ -40,7 +40,11 @@
       <div class="col s12 m4 l4">
         <a href='/index'>
           <div class="intro yellow darken-4 z-depth-1">
-            <h5 clas="grey lighten-4 grey-text text-darken-1">Click here to enter</h5>
+
+
+            <iframe src="http://free.timeanddate.com/countdown/i52u9u6e/n805/cf11/cm0/cu4/ct0/cs0/ca0/cr0/ss0/cacfff/cpc000/pcf57f17/tcfff/fs100/szw320/szh135/tatClick%20below/tacfff/tptTime%20since%20Event%20started%20in/tpc000/matto%20enter%20site%20in%3A/macfff/mpc000/iso2016-02-23T00:00:00" allowTransparency="true" frameborder="0" width="253" height="57"></iframe>
+
+            <!--<h5 clas="grey lighten-4 grey-text text-darken-1">Click here to enter</h5>-->
           </div>
         </a>
       </div>
@@ -55,7 +59,7 @@
 
 
   <footer id = "homefoot">
-    <p>&copy; 2016 Kamari Wright and Ryan-Alexander Thomas</p>
+    <p>&copy; 2016 Kamari Wright and <a href="http://ryanportfolio.meteor.com">Ryan-Alexander Thomas</a></p>
   </footer>
 
 
