--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -243,7 +243,7 @@
 
     <!--FOOTER-->
     <footer id = "indexfoot">
-      <p>&copy; 2016 Kamari Wright and Ryan-Alexander Thomas</p>
+      <p>&copy; 2016 Kamari Wright and <a href="http://ryanportfolio.meteor.com">Ryan-Alexander Thomas</a></p>
     </footer>
 
   </body>
