changed image for curt

--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -133,7 +133,7 @@
             <h6>VICE PRESIDENT</h6>
               <div class="card grey z">
                 <div class="card-content white-text">
-                  <img src="images/can2.jpg" width="150" height="150">
+                  <img src="images/curt2.png" width="150" height="150">
                   <p>Once opened for Good Charlotte in SXSW.</p>
                 </div>
                 <div class="card-action">
@@ -248,7 +248,7 @@
 
     <!--FOOTER-->
     <footer id = "indexfoot">
-      <p>&copy; 2016 Kamari Wright and <a href="http://ryanportfolio.meteor.com">Ryan-Alexander Thomas</a></p>
+      <p>&copy; 2016 <a href="https://github.com/Kamariw95">Kamari Wright</a> and <a href="http://ryanportfolio.meteor.com">Ryan-Alexander Thomas</a></p>
     </footer>
 
   </body>
