--- a/client/Templates/home.html
+++ b/client/Templates/home.html
@@ -27,14 +27,16 @@
 
     <!--<iframe id = "homevideo" src="https://player.vimeo.com/video/149478317?autoplay=1&loop=1&color=f3d0b5&title=0&byline=0&portrait=0&badge=0" width="100%" height="200" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>-->
 
-        <video id = "homevideo" width="320" height="240" controls autoplay>
+        <video id = "homevideo" width="100%" max-height="500px" controls autoplay>
         <source src="images/vid.mp4" type="video/mp4">
 
 
 
     </video>
 
-    <div class="row">
+
+
+
       <div class="col s12 m4 l4">
       </div>
       <div class="col s12 m4 l4">
@@ -42,7 +44,7 @@
           <div class="intro yellow darken-4 z-depth-1">
 
 
-          <iframe src="http://free.timeanddate.com/countdown/i52zu30i/n805/cf12/cm0/cu4/ct0/cs0/ca0/cr0/ss0/cacfff/cpc000/pcf57f17/tcfff/fs100/szw320/szh135/tatEnter%20Site%20in/tacfff/tptTime%20since%20Event%20started%20in/tpc000/macf57f17/mpc000/iso2016-02-28T20:00:00" allowTransparency="true" frameborder="0" width="111" height="69"></iframe>
+          <iframe src="http://free.timeanddate.com/countdown/i52zu30i/n805/cf12/cm0/cu4/ct0/cs0/ca0/cr0/ss0/cacfff/cpc000/pcf57f17/tcfff/fs100/szw320/szh135/tatEnter%20Site%20in/tacfff/tptTime%20since%20Event%20started%20in/tpc000/macf57f17/mpc000/iso2016-02-28T20:00:00" allowTransparency="true" frameborder="0" width="300" height="200"></iframe>
 
 
           <!--<h5 clas="grey lighten-4 grey-text text-darken-1">Click here to enter</h5>-->
@@ -51,7 +53,7 @@
       </div>
       <div class="col s12 m4 l4">
       </div>
-    </div>
+
     </div>
 
   </body>
