--- a/client/Templates/home.html
+++ b/client/Templates/home.html
@@ -27,8 +27,8 @@
 
     <!--<iframe id = "homevideo" src="https://player.vimeo.com/video/149478317?autoplay=1&loop=1&color=f3d0b5&title=0&byline=0&portrait=0&badge=0" width="100%" height="200" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>-->
 
-        <video id = "homevideo" width="100%" max-height="500px" controls autoplay>
-        <source src="images/vid.mp4" type="video/mp4">
+       <video id = "homevideo" width="100%" max-height="500px" controls autoplay>
+        <source src="images/vids.mp4" type="video/mp4">
 
 
 
@@ -41,14 +41,14 @@
       </div>
       <div class="col s12 m4 l4">
 
-          <div class="intro yellow darken-4 z-depth-1">
+          <a href="/"><div class="intro yellow darken-4 z-depth-1">
 
 
-          <iframe src="http://free.timeanddate.com/countdown/i52zu30i/n805/cf12/cm0/cu4/ct0/cs0/ca0/cr0/ss0/cacfff/cpc000/pcf57f17/tcfff/fs100/szw320/szh135/tatEnter%20Site%20in/tacfff/tptTime%20since%20Event%20started%20in/tpc000/macf57f17/mpc000/iso2016-02-28T20:00:00" allowTransparency="true" frameborder="0" width="300" height="200"></iframe>
+          <iframe src="http://free.timeanddate.com/countdown/i52zu30i/n805/cf12/cm0/cu4/ct0/cs0/ca0/cr0/ss0/cacfff/cpc000/pcf57f17/tcfff/fs100/szw320/szh135/tatEnter%20Site%20in/tacfff/tptTime%20since%20Event%20started%20in/tpc000/macf57f17/mpc000/iso2016-02-28T20:00:00" allowTransparency="true" frameborder="0" width="111" height="69"></iframe>
 
 
           <!--<h5 clas="grey lighten-4 grey-text text-darken-1">Click here to enter</h5>-->
-          </div>
+        </div></a>
 
       </div>
       <div class="col s12 m4 l4">
@@ -64,9 +64,10 @@
 
 
   <footer id = "homefoot">
-    <p><a href="images/value.png">VALUE REPORT</a></p>
-    <p><a href="http://usg.osu.edu/government/the_judicial_panel">http://usg.osu.edu/government/the_judicial_panel</a></p>
-    <p>&copy; 2016 <a href="https://github.com/Kamariw95">Kamari Wright</a> and <a href="http://ryanathomas.com">Ryan-Alexander Thomas</a></p>
+
+    <p><a href="http://usg.osu.edu/getinvolvedinusg/usg_elections">      JP</a>   |
+    <a href="images/value.png">VALUE REPORT</a></p>
+    <p id="footus">&copy; 2016 <a style="color: rgb(0,0,0)" href="https://github.com/Kamariw95">Kamari Wright</a> and <a style="color: rgb(0,0,0)" href="http://ryanathomas.com">Ryan-Alexander Thomas</a></p>
   </footer>
 
 
