--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,7 @@ footer
 	 font-size: 1em;
 	  text-align: center;
 	  clear: both;
-		margin-top: -20%;
+		margin-top: 0%;
 
 	  color: #000;
 	}
@@ -345,7 +345,7 @@ margin: 0 10px 0 0;
 	 font-size: 1em;
 		text-align: center;
 		clear: both;
-		margin-top: 0;
+		margin-top: 10%;
 		color: #000;
 	}
 
@@ -502,4 +502,8 @@ textarea {
   outline: none;
   background: rgba(52, 152, 219, 0.1);
   color: rgba(51, 51, 51, 0.7);
+}
+
+#footus{
+	text-decoration: none;
 }
