updated policy page

--- a/client/Templates/home.html
+++ b/client/Templates/home.html
@@ -65,7 +65,7 @@
 
   <footer id = "homefoot">
 
-    <p><a href="http://usg.osu.edu/getinvolvedinusg/usg_elections">      JP</a>   |
+    <p><a href="https://docs.google.com/document/d/1CM7_51GPpb_aA2YR1f5zvij1RZmNduH-X7L88Oo6lnY/mobilebasic?pref=2&pli=1"> POLICY </a>| <a href="http://usg.osu.edu/getinvolvedinusg/usg_elections">      JP</a>   |
     <a href="images/value.png">VALUE REPORT</a></p>
     <p id="footus">&copy; 2016 <a style="color: rgb(0,0,0)" href="https://github.com/Kamariw95">Kamari Wright</a> and <a style="color: rgb(0,0,0)" href="http://ryanathomas.com">Ryan-Alexander Thomas</a></p>
   </footer>
