changed website background

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body, html
 {
-	background-image: url(images/pattern7.png) !important;
+	background-image: url(images/greywood2.png) !important;
 /*#DFB8A5    orange accent-4*/
 
 }
